syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "trb_officer_backend";

package transaction;

service TransactionService {
  rpc GetTransactionList (GetTransactionListRequest) returns (stream common.Transaction);
  rpc GetTransactionsHistory (GetTransactionsHistoryRequest) returns (GetTransactionsHistoryResponse);
}

// Get Transactions List
message GetTransactionListRequest{
  
}

// Get Account List
message GetTransactionsHistoryRequest{
  string token = 1;
  string accountId = 2;
}
message GetTransactionsHistoryResponse{
  repeated common.TransactionParsed transactions = 1;
}